# gapi

./: package-lock.json  package.json
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Explorer.tsx  Main.tsx  Sidebar.tsx
src/components/main/: Navbar.tsx  Request.tsx  Response.tsx
src/components/main/navbar/: Input.tsx  Select.tsx  Send.tsx
src/interface/: NavbarComponentsInterface.ts  PluginsInterface.ts
tauri-plugins/tauri-plugin-rest/: Cargo.toml  README.md
tauri-plugins/tauri-plugin-rest/.changes/: config.json  initial-release.md  readme.md
tauri-plugins/tauri-plugin-rest/src/: component.rs  error.rs  lib.rs  metadata.rs  request.rs
